objects/X7S_Shr_Custom_Field__mdt/X7S_Shr_Custom_Field__mdt.object-meta.xml
<CustomObject>
    <description>Custom field definition</description>
    <label>7S Shr Custom Field</label>
    <pluralLabel>7S Shr Custom Fields</pluralLabel>
</CustomObject>