objects/X7S_Shr_Custom_Field__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <inlineHelpText>Field API name</inlineHelpText>
    <label>API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>