objects/X7S_Shr_Custom_Field__mdt/fields/Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Tooltip__c</fullName>
    <inlineHelpText>Field tooltip on mouse hover</inlineHelpText>
    <label>Tooltip</label>
    <type>TextArea</type>
</CustomField>