objects/X7S_Shr_Custom_Field__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Custom field type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>picklist</fullName>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>number</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>percent</fullName>
                <label>Percent</label>
            </value>
            <value>
                <fullName>currency</fullName>
                <label>Currency</label>
            </value>
            <value>
                <fullName>date</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>datetime</fullName>
                <label>Datetime</label>
            </value>
            <value>
                <fullName>textarea</fullName>
                <label>Textarea</label>
            </value>
            <value>
                <fullName>richtext</fullName>
                <label>Richtext</label>
            </value>
            <value>
                <fullName>multi-picklist</fullName>
                <label>Multi-picklist</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>phone</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>lookup</fullName>
                <label>Lookup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>